diskussion feddig und anpassung der theorie und auswertung

--- a/v355/content/auswertung.tex
+++ b/v355/content/auswertung.tex
@@ -34,7 +34,7 @@ Fälschlicherweise wurden die Amplituden von je zwei Perioden gezählt, weshalb 
 
 Zur Berechnung der Theoriewerte wird zunächst der Theoriewert der Frequenz $\nu^-$ zu den jeweiligen Kondensatoren mit den Kapazitäten $C_\text{K}$ bestimmt. Auch hier muss 
 die zusätzliche Kapazität der Spule $C_\text{Sp}$ berücksichtigt werden. Diese wird wie zuvor zusätzlich zur Gesamtkapazität addiert. Mittels der Werte von $\nu^+$ und $\nu^-$ 
-lässt sich nach !!!autoref{Steffen Du Vollhorst da fehlen Formeln in der Theorie}!!! die Frequenz der Schwebung berechenen, woraus wiederum das Verhältnis $n$ der 
+lässt sich nach \autoref{T_Schwebung} die Frequenz der Schwebung berechenen, woraus wiederum das Verhältnis $n$ der 
 Schwingungsperioden pro Schwebungsperiode bestimmt werden kann. Die jeweiligen Werte können \autoref{tab:Werte_a} entnommen werden.
 \begin{table}
     \centering
