--- a/v355/content/theorie.tex
+++ b/v355/content/theorie.tex
@@ -49,7 +49,18 @@ und
     I_2(t) = \frac{1}{2} I_{1_0}\text{sin}\left(\frac{1}{2}(\omega^+ + \omega^-)t\right) \text{sin}\left(\frac{1}{2}(\omega^+ - \omega^-)t\right)
 \end{equation*}
 .
-Die dazugehörige Schwebungsfrequenz ist durch $\left(\nu^- -\nu^+\right)$ gegeben.
+Die dazugehörige Schwebungsfrequenz $\nu^s$ ist durch 
+\begin{equation}
+    \label{T_Schwebung}
+    \nu^s\left(\nu^- -\nu^+\right)
+\end{equation}
+gegeben. Der Strom der Oszillatoren schwingt dann zwischen einer Anfangsamplitude $I_{{1,2}_0}$ und der $0$.
+Die Anzahl der maximalen positiven oder negativen Auslenkungen innerhalb einer Schwebung kann durch
+\begin{equation}
+    \label{T_n}
+    n = \frac{\nu^+ + \nu^-}{2\left(\nu^- - \nu^+\right)} 
+\end{equation}
+bestimmt werden.  
 \begin{figure}
     \centering
     \caption{In dieser Abbildung ist die Skizze eines kapazitiv gekoppelten Schwingkreises zu sehen. \cite{v355}}
