nur rechtschreibung gefixt

--- a/v355/content/diskussion.tex
+++ b/v355/content/diskussion.tex
@@ -1,5 +1,6 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Im folgenden werden die experimentellen Abweichungen zur Theorie und mögliche Fehlerquellen diskutiert.
 Zunächst fällt auf, dass bei der Abstimmung der beiden Schwingkreise auf ihre Resonanzfrequenz die Abbweichung von $0.46\%$ sehr gering ist. Diese gute Einstellung ist ein wichtiges Qualitätsmerkmal
 für Messungen, welche im weiteren noch diskutiert werden. Nach dieser Einstellung wurde die Schwebungsfrequenz untersucht. Bei dieser Messung ist zu erkennen, dass die Abweichungen mit $0.8\%$ für
 den größten Widerstand noch sehr genau ist. Allerdings werden die Abweichungen mit sinkendem Widerstand immer größer. Die Abweichungen steigen bis auf $30.3\%$ für den geringsten Widerstand. Dies 
