--- a/v355/content/theorie.tex
+++ b/v355/content/theorie.tex
@@ -4,9 +4,9 @@ In diesem Versuch sollen gekoppelte Schwingkreise auf ihren Energieübergang unt
 betrachtet.
 \section{Theorie}
 \label{sec:Theorie}
-Zu Beginn wird disskutiert wann ein System gekoppelt genannt wird, da ein solches System in diesem Versuch untersucht wird. Von einem gekoppelten System wird gesprochen, wenn es aus zwei "Untersystemen"
-besteht, welche im gegenseitigem Energieaustausch stehen. Ein leichtes Beispiel für ein gekoppeltes System ist ein gekoppeltes Pendel. Die beiden Einzelpendel entsprechen dabei den Untersystemen.
-Diese werden dann durch eine Feder gekoppelt, wodurch sie im gegenseitigen Energieaustausch stehen. In disem Versuch wird anstatt gekoppelter Pendel kapazitiv gekoppelte Schwingkreise betrachtet.
+Zu Beginn wird disskutiert wann ein System gekoppelt genannt wird, da ein solches System in diesem Versuch untersucht wird. Von einem gekoppelten System wird gesprochen, wenn es aus zwei Untersystemen
+besteht, welche im gegenseitigem Energieaustausch stehen. Ein leichtes Beispiel für ein gekoppeltes System sind zwei gekoppelte Pendel. Die beiden Einzelpendel entsprechen dabei den Untersystemen.
+Diese werden dann durch eine Feder gekoppelt, wodurch sie im gegenseitigen Energieaustausch stehen. In diesem Versuch werden anstatt gekoppelter Pendel kapazitiv gekoppelte Schwingkreise betrachtet.
 Bei solchen Systemen ist es häufig von Interesse das Verhalten unter äußerer Anregung zu untersuchen.
 \subsection{Kapazitiv gekoppelte Schwingkreise}
 \label{T_KgS}
@@ -31,13 +31,13 @@ Aus \autoref{eqn:T_Iplus} und \autoref{eqn:T_Iminus} lassen sich die Schwinungsf
     \label{T_num}
     \nu^- =  \frac{1}{2\pi\sqrt{L\left(\frac{1}{C}+\frac{2}{C_k}\right)^{-1}}}
 \end{equation}
-Desweiteren lassen sich aus \autoref{eqn:T_Iplus} und \autoref{eqn:T_Iminus} die Stomverläufe $I_1(t)$ und $I_2(t)$ aufstellen. Durch Addition und Subtraktion der beiden genannten Gleichungen 
+Des Weiteren lassen sich aus \autoref{eqn:T_Iplus} und \autoref{eqn:T_Iminus} die Stomverläufe $I_1(t)$ und $I_2(t)$ aufstellen. Durch Addition und Subtraktion der beiden genannten Gleichungen 
 folgt 
 \begin{equation}
     \label{T_I}
     I_{1,2}(t) = \frac{1}{2}\left(I_{1_0} + I_{2_0}\right)\text{cos}\left(2\pi\nu^+ t\right) - \frac{1}{2}\left(I_{1_0} - I_{2_0}\right)\text{cos}\left(2\pi\nu^- t\right)
 \end{equation}
-Betrachtet man nun den Fall der gleichsinnigen Schwingung $\left(I_{1_0} = I_{2_0}\right)$ fällt der Differentteil der \autoref{T_I} weg und die Oszillatoren schwingen gleichphasig mit der Frequenz 
+Betrachtet man nun den Fall der gleichsinnigen Schwingung $\left(I_{1_0} = I_{2_0}\right)$ fällt der Differenzteil der \autoref{T_I} weg und die Oszillatoren schwingen gleichphasig mit der Frequenz 
 $\nu^+$.
 Für den gegensinnigen Schwingfall $\left(I_{1_0} = -I_{2_0}\right)$ ergibt sich, dass die Oszillatoren gegenphasig mit der Frequenz $\nu^-$ schwingen.
 Beim Schwebungsfall gilt zur Zeit $t = 0$ $I_{1_0}\neq 0$ und $I_{2_0} = 0$. Daraus ergit sich für \autoref{T_I} 
@@ -52,7 +52,7 @@ und
 Die dazugehörige Schwebungsfrequenz $\nu^s$ ist durch 
 \begin{equation}
     \label{T_Schwebung}
-    \nu^s\left(\nu^- -\nu^+\right)
+    \nu^s = \nu^- -\nu^+
 \end{equation}
 gegeben. Der Strom der Oszillatoren schwingt dann zwischen einer Anfangsamplitude $I_{{1,2}_0}$ und der $0$.
 Die Anzahl der maximalen positiven oder negativen Auslenkungen innerhalb einer Schwebung kann durch
