Korrekturen Korrektschmuren sag ich immer

--- a/v355/content/auswertung.tex
+++ b/v355/content/auswertung.tex
@@ -32,10 +32,10 @@ Fälschlicherweise wurden die Amplituden von je zwei Perioden gezählt, weshalb 
     \includegraphics[width = 0.6\textwidth]{content/Amplituden.jpg}
 \end{figure}
 
-Zur Berechnung der Theoriewerte wird zunächst der Theoriewert der Frequenz $\nu^-$ zu den jeweiligen Kondensatoren mit den Kapazitäten $C_\text{K}$ bestimmt. Auch hier muss 
+Zur Berechnung der Theoriewerte wird zunächst der Theoriewert der Frequenz $\nu^-$ unter Verwendung der \autoref{eqn:T_Schwebung} zu den jeweiligen Kondensatoren mit den Kapazitäten $C_\text{K}$ bestimmt. Auch hier muss 
 die zusätzliche Kapazität der Spule $C_\text{Sp}$ berücksichtigt werden. Diese wird wie zuvor zusätzlich zur Gesamtkapazität addiert. Mittels der Werte von $\nu^+$ und $\nu^-$ 
 lässt sich nach \autoref{T_Schwebung} die Frequenz der Schwebung berechenen, woraus wiederum das Verhältnis $n$ der 
-Schwingungsperioden pro Schwebungsperiode bestimmt werden kann. Die jeweiligen Werte können \autoref{tab:Werte_a} entnommen werden.
+Schwingungsperioden pro Schwebungsperiode nach \autoref{eqn:T_n} bestimmt werden kann. Die jeweiligen Werte können \autoref{tab:Werte_a} entnommen werden.
 \begin{table}
     \centering
     \caption{Ergebnisse zur Messung des Verhältnisses von Schwingung und Schwebung} 
