--- a/v355/content/diskussion.tex
+++ b/v355/content/diskussion.tex
@@ -1,21 +1,22 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-Im folgenden werden die experimentellen Abweichungen zur Theorie und mögliche Fehlerquellen diskutiert.
+Im Folgenden werden die experimentellen Abweichungen zur Theorie und mögliche Fehlerquellen diskutiert.
 Zunächst fällt auf, dass bei der Abstimmung der beiden Schwingkreise auf ihre Resonanzfrequenz die Abbweichung von $0.46\%$ sehr gering ist. Diese gute Einstellung ist ein wichtiges Qualitätsmerkmal
 für Messungen, welche im weiteren noch diskutiert werden. Nach dieser Einstellung wurde die Schwebungsfrequenz untersucht. Bei dieser Messung ist zu erkennen, dass die Abweichungen mit $0.8\%$ für
-den größten Widerstand noch sehr genau ist. Allerdings werden die Abweichungen mit sinkendem Widerstand immer größer. Die Abweichungen steigen bis auf $30.3\%$ für den geringsten Widerstand. Dies 
-kann zum einen an den in der Versuchsaleitung \cite{v355} beschriebenen systematischen Abweichungen liegen. Allerdings ist so ein experimenteller Verlauf zu erwarten, da mit geringerem Widerstand 
-auch die Qualität des Schwingvorgangs abnimmt. Zunächst wurden die Fundamentalfrequenzen über die Lissajous-Figuren bestimmt. Bei der Frequenz $\nu^+$ fällt sofort auf, dass der experimentelle Wert
-bei fallendem $C_k$ ansteigt. Nach Theorie sollte dieser allerdings Konstant seien. Dies könnte an einem systematischen Fehler liegen, da sich eine Gerade zwischen der Resonanzfrequenz und der Frequenz
-$\nu^-$ gebildet hat. Der Grund für das Auftreten dieser ist ungewiss. Eine weitere Fehlerquelle ist das händische Einstellen der Gerade. In einem kleinen Frequenzbereich um diese Gerade kann nur geraten werden 
-welche die beste Frequenz ist. Außerdem schwankt die Anzeigen des Oszilloskops dauerhaft, weshalb man die Frequenz nicht mit voller Sicherheit ablesen kann. Trotzdem liegen alle Werte
-für $\nu^+$, außer der mit dem kleinsten Widerstand, in eine akzeptabelen Bereich von Abweichungen zwischen $2.29\%$ und $9.37\%$. Die experimentellen Werte für die Frequenz $\nu^-$ sind sehr 
-qualitativ, da alle Abweichungen kleiner als $0.42\%$ sind. Zuletzt wurden die Fundamentalfrequenzen mittels der Sweep-Funktion bestimmt. Durch diese Methode werde die Frequenz $\nu^+$ mit einer 
-Abweichungen von $3.34\%$ bestimmt. Es existiert nur eine Abweichung, da ${t^+}_{exp}$ Konstant war. Dieser Wert ist im Mittel besser als die Methode der Lissajous-Figuren, allerdings ist für die gorßen 
+die größte Kapazität noch sehr genau ist. Allerdings werden die Abweichungen mit sinkender Kapazität stetig größer. Die Abweichungen steigen bis auf $30.3\%$ für die geringste Kapazität an. Dies 
+kann an den in der Versuchsanleitung \cite{v355} beschriebenen systematischen Abweichungen liegen. Ein solcher Verlauf ist experimentell zu erwarten, da mit geringerer Kapazität 
+auch die Qualität des Schwingvorgangs abnimmt. Die Fundamentalfrequenzen wurden zuerst über die Lissajous-Figuren bestimmt. Bei der Frequenz $\nu^+$ fällt auf, dass der experimentelle Wert
+bei fallendem $C_k$ ansteigt. Nach Theorie sollte dieser allerdings konstant sein. Dies könnte an einem systematischen Fehler liegen, da sich eine Gerade zwischen der Resonanzfrequenz und der Frequenz
+$\nu^-$ gebildet hat. Der Grund für das Auftreten dieser ist ungewiss. Eine weitere Fehlerquelle ist das händische Einstellen der Gerade. In einem kleinen Frequenzbereich um diese Gerade kann nur geraten werden, 
+welche die beste Frequenz ist. Außerdem unterliegt die Anzeige des Generators Schwankungen, weshalb die Frequenz nicht eindeutig abgelesen werden kann. Dennoch liegen alle Werte
+für $\nu^+$, mit Ausnahme dem der kleinsten Kapazität, in einem akzeptabelen Bereich mit relativen Abweichungen von $2.29\%$ bis $9.37\%$. Die experimentellen Werte für die Frequenz $\nu^-$ sind sehr 
+qualitativ, da alle Abweichungen kleiner als $0.42\%$ sind. Zuletzt wurden die Fundamentalfrequenzen mittels der Sweep-Funktion bestimmt. Durch diese Methode wurde die Frequenz $\nu^+$ mit einer 
+Abweichungen von $3.34\%$ bestimmt. Dieser Wert ist im Mittel besser als die Methode der Lissajous-Figuren, allerdings ist für die großen Kapazitäten
 $C_k$ die Lissajousmethode genauer. Für die Frequenz $\nu^-$ liegen die Abweichungen in einem Bereich von $1.64\%$ bis $4.46\%$. Die Abweichungen liegen alle in einem relativ kleinem Intervall. 
-Dies spricht für die Qualität der Werte. Für den Widerstand $1.01\unit{\ohm}$ war die Auflösung des Oszilloskops nicht ausreichend um den Wert abzulesen. Allerdings gilt auch hier, dass die Lissajousmethode 
+Dies spricht für die Qualität der Werte. Für die Kapazität $1.01\, \unit{\nano\farad}$ war die Auflösung des Oszilloskops nicht ausreichend um den Wert abzulesen. Auch hier stellt sich heraus, 
+dass die Lissajous-Methode 
 genauer ist. Die Abweichungen sind unter anderem durch die Sweep-Funktion zu erklären. Diese wurde ursprünglich auf $20 \unit{\kilo\hertz}$ und $50 \unit{\kilo\hertz}$ eingestellt. 
-Diese Einstellung änderte sich allerdings im Verlauf der Messungen. Außerdem ist das optische Ablesen am Bildschrim des Oszilloskops grundlegend ungenau.
+Diese Einstellung änderte sich allerdings im Verlauf der Messungen. Des Weiteren ist das optische Ablesen am Bildschirm des Oszilloskops grundlegend ungenau.
 
 
 Zusammenfassend bestätigen dennoch beide Methoden die Theorie, da die relativen Abweichungen alle im Rahmen der Messunsichherheit des Expermientes liegen. 
