--- a/v355/content/durchfuehrung.tex
+++ b/v355/content/durchfuehrung.tex
@@ -3,7 +3,7 @@
 Für die Durchführung des Versuches wird die in \autoref{fig:Schaltung} gezeigte Schaltung verwendet. 
 \begin{figure}
     \centering
-    \caption{Foto des verwendeten Schaltbaukastens. Zu erkennen sind die Werte der Verbauten Widerstände, Induktivitäten und Kapazitäten.}
+    \caption{Foto des verwendeten Schaltbaukastens. Zu erkennen sind die Werte der verbauten Widerstände, Induktivitäten und Kapazitäten.}
     \label{fig:Schaltung}
     \includegraphics[width=0.5\textwidth]{content/Schaltung.jpg}
 \end{figure}
@@ -42,8 +42,8 @@ gewählt. Durch Auftragen der am $Y_A$-Eingang gemessenen Spannung gegen die Gen
 Frequenzen bei denen sich eine Gerade einstellt sind die Frequenzen $\nu^+$ und $\nu^-$ der Fundamentalschwingungen. Ihre Werte werden in Abhängigkeit zur Kapazität 
 des Kopplungskondensators notiert.
 
-Im letzten Teil der Messung soll die Frequenzabhängigkeit des Stroms gemessen werden. Dazu wird die \textit{Sweep}-Funktion des Spannungsgenerators genutzt. Mit Dieser
-lässt sich ein Spektrum an Frequenzen durchlaufen. Als Startwert sollte $20 \, \unit{\kilo\hertz}$- und als Endwert $50 \, \unit{\kilo\hertz}$ gewählt werden. Die Zeit 
+Im letzten Teil der Messung soll die Frequenzabhängigkeit des Stroms gemessen werden. Dazu wird die \textit{Sweep}-Funktion des Spannungsgenerators genutzt. Mit dieser
+lässt sich ein einstellbares Frequenzspektrum durchlaufen. Als Startwert sollte $20 \, \unit{\kilo\hertz}$- und als Endwert $50 \, \unit{\kilo\hertz}$ gewählt werden. Die Zeit 
 in der dieser Frequenzbereich durchlaufen wird sollte auf $0.02 \, \unit{\second}$ eingestellt werden. Auf dem Bildschirm des Oszilloskops entsteht nun ein Spannungsverlauf,
 an dem zwei große Peaks zu erkennen sind, die den Fundamentalfrequenzen $\nu^+$ und $\nu^-$ entsprechen. Es werden die Breite einer Periode des Verlaufes, der Zeitpunkt an
 denen die Maxima auftreten und der Betrag der Maxima notiert. Dies wird für alle Kondensatoren $C_K$ wiederholt.
