--- a/v355/content/theorie.tex
+++ b/v355/content/theorie.tex
@@ -1,17 +1,18 @@
 \section{Ziel}
 \label{sec:Ziel}
-In diesem Versuch sollen gekoppelte Schwingkreise auf ihren Energieübergang untersucht werden. Dazu werden die Frequenzabhängigkeiten des Stroms, sowie die Fundamentalschwingungen mittles der Lissajous-Figuren,
+In diesem Versuch sollen gekoppelte Schwingkreise auf ihren Energieübergang untersucht werden. Dazu werden die Frequenzabhängigkeiten des Stroms, sowie die Fundamentalschwingungen mithilfe der Lissajous-Figuren,
 betrachtet.
 \section{Theorie}
 \label{sec:Theorie}
-Zu Beginn wird disskutiert wann ein System gekoppelt genannt wird, da ein solches System in diesem Versuch untersucht wird. Von einem gekoppelten System wird gesprochen, wenn es aus zwei Untersystemen
-besteht, welche im gegenseitigem Energieaustausch stehen. Ein leichtes Beispiel für ein gekoppeltes System sind zwei gekoppelte Pendel. Die beiden Einzelpendel entsprechen dabei den Untersystemen.
-Diese werden dann durch eine Feder gekoppelt, wodurch sie im gegenseitigen Energieaustausch stehen. In diesem Versuch werden anstatt gekoppelter Pendel kapazitiv gekoppelte Schwingkreise betrachtet.
+Ein System heißt \dq gekoppeltes\dq\; System, wenn es aus zwei Untersystemen
+besteht, welche im gegenseitigem Energieaustausch stehen. Ein einfaches Beispiel für ein gekoppeltes System sind zwei gekoppelte Pendel. Die beiden Einzelpendel entsprechen dabei den Untersystemen.
+Sie sind durch eine Feder gekoppelt, wodurch sie im gegenseitigen Energieaustausch stehen. In diesem Versuch werden anstatt gekoppelter Pendel kapazitiv gekoppelte Schwingkreise betrachtet.
 Bei solchen Systemen ist es häufig von Interesse das Verhalten unter äußerer Anregung zu untersuchen.
 \subsection{Kapazitiv gekoppelte Schwingkreise}
 \label{T_KgS}
 Nun wird ein Schwingkreise wie in \autoref{fig:T_skgS} betrachtet. Die Kopplung findet über den Kondensator $C_k$ statt, wodurch sich die beiden Schwingkreise das elektrische Feld dieses Kondensators
-teilen. Durch die kirchhoffschen Regeln lassen sich zwei unabhängige Differentialgleichungen aufstellen. Die Lösung dieser beschreiben den überlagerten Stromverlauf, sowie den Verlauf der Differenz.
+teilen. Durch die Kirchhoffschen Regeln lassen sich zwei unabhängige Differentialgleichungen aufstellen. Die Lösungen dieser beschreiben den überlagerten Stromverlauf,
+sowie den Verlauf der Differenz des Stroms.
 Die Summe der beiden Ströme $I_1$ und $I_2$ wird durch 
 \begin{equation}
     \label{eqn:T_Iplus}
@@ -35,12 +36,12 @@ Des Weiteren lassen sich aus \autoref{eqn:T_Iplus} und \autoref{eqn:T_Iminus} di
 folgt 
 \begin{equation}
     \label{T_I}
-    I_{1,2}(t) = \frac{1}{2}\left(I_{1_0} + I_{2_0}\right)\text{cos}\left(2\pi\nu^+ t\right) - \frac{1}{2}\left(I_{1_0} - I_{2_0}\right)\text{cos}\left(2\pi\nu^- t\right)
+    I_{1,2}(t) = \frac{1}{2}\left(I_{1_0} + I_{2_0}\right)\text{cos}\left(2\pi\nu^+ t\right) - \frac{1}{2}\left(I_{1_0} - I_{2_0}\right)\text{cos}\left(2\pi\nu^- t\right).
 \end{equation}
-Betrachtet man nun den Fall der gleichsinnigen Schwingung $\left(I_{1_0} = I_{2_0}\right)$ fällt der Differenzteil der \autoref{T_I} weg und die Oszillatoren schwingen gleichphasig mit der Frequenz 
+Betrachtet man nun den Fall der gleichsinnigen Schwingung $\left(I_{1_0} = I_{2_0}\right)$, fällt der Differenzteil der \autoref{T_I} weg und die Oszillatoren schwingen gleichphasig mit der Frequenz 
 $\nu^+$.
 Für den gegensinnigen Schwingfall $\left(I_{1_0} = -I_{2_0}\right)$ ergibt sich, dass die Oszillatoren gegenphasig mit der Frequenz $\nu^-$ schwingen.
-Beim Schwebungsfall gilt zur Zeit $t = 0$ $I_{1_0}\neq 0$ und $I_{2_0} = 0$. Daraus ergit sich für \autoref{T_I} 
+Beim Schwebungsfall gilt zur Zeit $t = 0$ $I_{1_0}\neq 0$ und $I_{2_0} = 0$. Daraus ergibt sich für \autoref{T_I} 
 \begin{equation*}
     I_1(t) = \frac{1}{2} I_{1_0}\text{cos}\left(\frac{1}{2}(\omega^+ + \omega^-)t\right) \text{cos}\left(\frac{1}{2}(\omega^+ - \omega^-)t\right)
 \end{equation*}
@@ -51,13 +52,13 @@ und
 .
 Die dazugehörige Schwebungsfrequenz $\nu^s$ ist durch 
 \begin{equation}
-    \label{T_Schwebung}
+    \label{eqn:T_Schwebung}
     \nu^s = \nu^- -\nu^+
 \end{equation}
-gegeben. Der Strom der Oszillatoren schwingt dann zwischen einer Anfangsamplitude $I_{{1,2}_0}$ und der $0$.
-Die Anzahl der maximalen positiven oder negativen Auslenkungen innerhalb einer Schwebung kann durch
+gegeben. Der Strom der Oszillatoren schwingt dann zwischen einer Anfangsamplitude $I_{{1,2}_0}$ und dem Wert $0$.
+Die Anzahl der Schwingungsperioden innerhalb einer Schwebung kann durch
 \begin{equation}
-    \label{T_n}
+    \label{eqn:T_n}
     n = \frac{\nu^+ + \nu^-}{2\left(\nu^- - \nu^+\right)} 
 \end{equation}
 bestimmt werden.  
