nur vorbeireitungsaufgabe weil kb mehr .-.

--- a/v101/content/durchfuehrung.tex
+++ b/v101/content/durchfuehrung.tex
@@ -1,2 +1,28 @@
 \section{Durchführung}
 \label{sec:Durchführung}
+In diesem Versuch werden, wie im \autoref{sec:Ziel} beschrieben, die Trägheitsmomente verschiedener Körper berechnet. 
+
+\subsection{Vorbereitungsaufgaben}
+\label{subsec:D_Va}
+Vorbereitend zu diesem Versuch werden zunächst ein paar beispielhafte Drehmomente $M_{\text{Bsp}}$
+zu verschiedenen Abständen $r_{\text{Bsp}}$ berechnet. Dazu wird die Formel $M = Fr\, \text{cos}(\frac{\pi}{2})$ genutzt. Die errechneten Werte können \autoref{tab:D_VA} entnommen werden.
+\begin{table}
+    \centering
+    \caption{Berechnete Werte der Vorbereitungsaufgabe} 
+    \label{tab:D_VA}
+    \begin{tabular}{c c}
+        \toprule
+        $r_{\text{Bsp}}\mathrm{/} \unit{\centi\metre}$ & $M_{\text{Bsp}}\mathrm{/}\unit{{\milli\newton\metre}}$\\
+        \midrule
+        5 & 3.563 \\
+        7.5 & 5.3 \\
+        10 & 7.07 \\
+        12.5 & 8.8 \\
+        15 & 10.6 \\
+        17.5 & 12.37 \\
+        20 & 14.14 \\
+        22.5 & 15.9 \\
+        25 & 17.67 \\
+        \bottomrule 
+    \end{tabular}
+\end{table}
