Theorie :white_check_mark:

--- a/lit.bib
+++ b/lit.bib
@@ -75,6 +75,13 @@
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1884597/mod_resource/content/1/V355.pdf},
 }
 
+@online{v101,
+	title        = {V101 - Das Trägheitsmoment},
+	organization = {TU Dortmund},
+	urldate      = {2022-01-12},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1884054/mod_resource/content/1/V101.pdf},
+}
+
 @book{Demtröder_Exp_P_1,
 	author       = {Professor Dr. Wolfgang Demtröder},
 	title        = {Experimentalphysik 1 Mechanik und Wärme},
