Update theorie.tex :heavy_plus_sign:

--- a/v101/content/theorie.tex
+++ b/v101/content/theorie.tex
@@ -32,13 +32,21 @@ In diesem Versuch wird ein System betrachtet, bei welchem eine Drehachse über d
 um einen Winkel $\phi$ ausgelenkt wird. Ein Drehmoment $\vec{M}$ wird durch eine Kraftwirkung $\vec{F}$ entlang eines Hebels $\vec{r}$ senkrecht zur Drehachse bewirkt und 
 lässt sich über den Zusammenhang $\vec{M} = \vec{F} \times \vec{r}$ berechnen.
 Das beschriebene System ist ein Beispiel eines harmonischen Oszillators, dessen Differentialgleichung durch eine Schwingung mit der Schwingungsdauer 
-\begin{equation}
+\begin{equation*}
     \label{eqn:Schwingungsdauer}
     T = 2\pi \sqrt{\frac{I}{D}}
+\end{equation*}
+gelöst wird. $D$ ist dabei die Winkelrichtgröße (\textit{Direktionsmoment}), welche der Federkonstante bei einer Translation entspricht. Aus dieser Gleichung lässt sich das Drehmoment 
+des Körpers --abzüglich des Eigendrehmoments $I_\text{D}$ der Drehachse selbst-- zu
+\begin{equation}
+    \label{eqn:I_K}
+    I_\text{K} = \frac{T^2}{4\pi^2}D - I_\text{D}
 \end{equation}
-gelöst wird. $D$ ist dabei die Winkelrichtgröße (Direktionsmoment), welche der Federkonstante bei einer Translation entspricht. Die Winkelrichtgröße beschreibt den Zusammenhang 
+bestimmen.
+Die Winkelrichtgröße beschreibt den Zusammenhang 
 \begin{equation}
     \label{eqn:Winkelrichtgröße}
     M = D \cdot \phi
 \end{equation}
-zwischen Auslenkung $\phi$ und dem Betrag $M$ des wirkenden Drehmoments.
+zwischen Auslenkung $\phi$ und dem Betrag $M$ des wirkenden Drehmoments. Der Betrag des Drehmoments kann gemäß der Gleichung $M = |\vec{F}|\cdot|\vec{r}| \sin{\alpha}$ mit 
+dem Winkel $\alpha$ zwischen $\vec{r}$ und $\vec{F}$ berechnet werden.
