jetzt aber (vielleicht) :trollface:

--- a/v101/content/theorie.tex
+++ b/v101/content/theorie.tex
@@ -29,7 +29,7 @@ Für einfache Geometrien ergeben sich bei konstanter Dichte $\rho$ grundlegende 
 \end{figure}
 
 In diesem Versuch wird ein System betrachtet, bei welchem eine Drehachse über das rücktreibende Drehmoment einer Feder in Schwingung versetzt werden kann, wenn die Drehachse
-um einen Winkel $\phi$ ausgelenkt wird. Ein Drehmoment $\vec{M}$ wird durch eine Kraftwirkung $\vec{F}$ entlang eines Hebels $\vec{r}$ senkrecht zur Drehachse bewirkt und 
+um einen Winkel $\phi$ ausgelenkt wird. Ein Drehmoment $\vec{M}$ wird durch eine Kraftwirkung $\vec{F}$ entlang eines Kraftarms $\vec{r}$ senkrecht zur Drehachse bewirkt und 
 lässt sich über den Zusammenhang $\vec{M} = \vec{F} \times \vec{r}$ berechnen.
 Das beschriebene System ist ein Beispiel eines harmonischen Oszillators, dessen Differentialgleichung durch eine Schwingung mit der Schwingungsdauer 
 \begin{equation*}
@@ -44,9 +44,11 @@ des Körpers --abzüglich des Eigendrehmoments $I_\text{D}$ der Drehachse selbst
 \end{equation}
 bestimmen.
 Die Winkelrichtgröße beschreibt den Zusammenhang 
+\begin{equation*}
+    M = D \cdot \phi
+\end{equation*}
+zwischen Auslenkung $\phi$ und dem Betrag $M$ des wirkenden Drehmoments. Für eine zum Kraftarm senkrechte Kraftwirkung ergibt sich für die Winkelrichtgröße
 \begin{equation}
     \label{eqn:Winkelrichtgröße}
-    M = D \cdot \phi
+    D = \frac{F \cdot r}{\phi}.
 \end{equation}
-zwischen Auslenkung $\phi$ und dem Betrag $M$ des wirkenden Drehmoments. Der Betrag des Drehmoments kann gemäß der Gleichung $M = |\vec{F}|\cdot|\vec{r}| \sin{\alpha}$ mit 
-dem Winkel $\alpha$ zwischen $\vec{r}$ und $\vec{F}$ berechnet werden.
